--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eb/enums-helper",
+  "name": "bulychev/enums-helper",
   "type": "library",
   "description": "Helpers for enums",
   "keywords": ["enum","helper"],
@@ -15,6 +15,6 @@
     "php": ">=8.1.0"
   },
   "autoload": {
-    "psr-4": { "EB\\EnumsHelper": "src/" }
+    "psr-4": { "Bulychev\\EnumsHelper": "src/" }
   }
 }
