--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     "php": ">=8.1.0"
   },
   "autoload": {
-    "psr-4": { "Bulychev\\EnumsHelper": "src/" }
+    "psr-4": { "Bulychev\\EnumsHelper\\": "src/" }
   }
 }
