--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
   "require": {
     "php": ">=8.1.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5.2"
+  },
   "autoload": {
     "psr-4": { "Bulychev\\EnumsHelper\\": "src/" }
+  },
+  "autoload-dev": {
+    "psr-4": { "Bulychev\\Tests\\EnumsHelper\\": "tests/" }
   }
 }
