--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,18 @@
     "php": ">=8.1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.2"
+    "phpunit/phpunit": "^9.5.2",
+    "phpstan/phpstan": "^1.9",
+    "friendsofphp/php-cs-fixer": "^3.13"
   },
   "autoload": {
     "psr-4": { "Bulychev\\EnumsHelper\\": "src/" }
   },
   "autoload-dev": {
     "psr-4": { "Bulychev\\Tests\\EnumsHelper\\": "tests/" }
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit",
+    "phpstan": "./vendor/bin/phpstan --xdebug"
   }
 }
