--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulychev/enums-helper",
+  "name": "bulychev/enums",
   "type": "library",
   "description": "Helpers for enums",
   "keywords": ["enum","enums","helper"],
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": ">=8.1.0"
+    "php": "^8.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.2",
@@ -20,10 +20,10 @@
     "friendsofphp/php-cs-fixer": "^3.13"
   },
   "autoload": {
-    "psr-4": { "Bulychev\\EnumsHelper\\": "src/" }
+    "psr-4": { "Bulychev\\Enums\\": "src" }
   },
   "autoload-dev": {
-    "psr-4": { "Bulychev\\Tests\\EnumsHelper\\": "tests/" }
+    "psr-4": { "Bulychev\\Enums\\Tests\\": "tests" }
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
