--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "phpstan": "./vendor/bin/phpstan --xdebug",
+    "phpstan": "./vendor/bin/phpstan analyse --xdebug",
     "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php"
   }
 }
